--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,22 @@
 <resources>
     <string name="app_name">Swoosh</string>
+    <string name="background_image">background image</string>
+    <string name="swoosh_logo">app logo</string>
+    <string name="desired_league_desc">Desired League</string>
+    <string name="desired_league_txt">Desired League?</string>
+    <string name="mens_txt">MENS</string>
+    <string name="mens_desc">MENS option</string>
+    <string name="womens_txt">WOMENS</string>
+    <string name="womens_desc">WOMENS option</string>
+    <string name="co_ed_txt">CO-ED</string>
+    <string name="co_ed_desc">CO-ED option</string>
+    <string name="next_txt">Next</string>
+    <string name="next_desc">Next button</string>
+    <string name="get_started_txt">GET STARTED</string>
+    <string name="get_started_desc">GET STARTED button</string>
+    <string name="go_all_in_txt">GO ALL IN</string>
+    <string name="go_all_in_desc">GO ALL IN</string>
+    <string name="on_going_all_out_txt">ON GOING ALL OUT</string>
+    <string name="on_going_all_out_desc">ON GOING ALL OUT</string>
+    <string name="paragraph_txt">Find a team in your city and dominate the league</string>
 </resources>
